# finradar

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_agent.py  test_e2e_agent.py  test_e2e_mock.py
.github/scripts/: setup-python
.github/workflows/: collect.yml
app/: __init__.py  collector.py
app/agents/: __init__.py  dspy_signatures.py  outreach_agent.py
app/api/: main.py
app/cli/: main.py
app/core/: __init__.py  config.py  models.py
app/processors/: __init__.py  outreach.py
app/sources/: __init__.py  china_sources.py  financial_sources.py  startup_sources.py
app/workflows/: __init__.py  discovery_flow.py  scheduled_flows.py
tests/: test_finradar.py
